[package]
name = "compiler"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem compiler"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytecode-verifier = { path = "../bytecode-verifier" }
ir-to-bytecode = { path = "ir-to-bytecode" }
bytecode-source-map = { path = "bytecode-source-map" }
diem-framework-releases = { path = "../diem-framework/releases" }
diem-workspace-hack = { path = "../../common/workspace-hack" }
move-ir-types = { path = "../move-ir/types" }
move-core-types = { path = "../move-core/types" }
vm = { path = "../vm" }
bcs = "0.1.2"
structopt = "0.3.21"
serde_json = "1.0.64"

[features]
default = []
diem_address = [
    "bytecode-verifier/diem_address",
    "move-ir-types/diem_address",
    "vm/diem_address",
    "ir-to-bytecode/diem_address",
    "bytecode-source-map/diem_address",

]
dfinance_address = [
    "bytecode-verifier/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "ir-to-bytecode/dfinance_address",
    "bytecode-source-map/dfinance_address",
]
ps_address = [
    "bytecode-verifier/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "ir-to-bytecode/ps_address",
    "bytecode-source-map/ps_address",
]
