[package]
name = "move-coverage"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem Move VM code coverage"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
once_cell = "1.7.2"
petgraph = "0.5.1"
structopt = "0.3.21"
serde = { version = "1.0.124", default-features = false }
anyhow = "1.0.38"
codespan = { version = "0.8.0", features = ["serialization"] }
colored = "2.0.0"

bcs = "0.1.2"
diem-types = { path = "../../../types" }
move-core-types = { path = "../../move-core/types" }
move-ir-types = { path = "../../move-ir/types" }
diem-workspace-hack = { path = "../../../common/workspace-hack" }
vm = { path = "../../vm" }
bytecode-source-map = { path = "../../compiler/bytecode-source-map" }
bytecode-verifier = { path = "../../bytecode-verifier" }

[features]
default = []
fuzzing = ["diem-types/fuzzing"]
diem_address = [
    "move-core-types/diem_address",
    "diem-types/diem_address",
    "move-ir-types/diem_address",
    "vm/diem_address",
    "bytecode-source-map/diem_address",
]
dfinance_address = [
    "move-core-types/dfinance_address",
    "diem-types/dfinance_address",
    "move-ir-types/dfinance_address",
    "vm/dfinance_address",
    "bytecode-source-map/dfinance_address",
]
ps_address = [
    "move-core-types/ps_address",
    "diem-types/ps_address",
    "move-ir-types/ps_address",
    "vm/ps_address",
    "bytecode-source-map/ps_address"
]