[package]
name = "vm-genesis"
version = "0.1.0"
edition = "2018"
authors = ["Diem Association <opensource@diem.com>"]
description = "Diem vm genesis"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.38"
once_cell = "1.7.2"
rand = "0.8.3"

bytecode-verifier = { path = "../../bytecode-verifier" }
bcs = "0.1.2"
diem-config = { path = "../../../config" }
diem-crypto = { path = "../../../crypto/crypto" }
diem-state-view = { path = "../../../storage/state-view" }
diem-types = { path = "../../../types" }
diem-workspace-hack = { path = "../../../common/workspace-hack" }
move-core-types = { path = "../../move-core/types" }
move-vm-runtime = { path = "../../move-vm/runtime"}
move-vm-types = { path = "../../move-vm/types" }
diem-framework = { path = "../../diem-framework" }
diem-framework-releases = { path = "../../diem-framework/releases" }
diem-transaction-builder = { path = "../../../sdk/transaction-builder"}
vm = { path = "../../vm" }
diem-vm = { path = "../../diem-vm" }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
diem-proptest-helpers = { path = "../../../common/proptest-helpers" }

[features]
default = []
fuzzing = ["diem-types/fuzzing", "move-vm-types/fuzzing"]
diem_address = [
    "move-core-types/diem_address",
    "bytecode-verifier/diem_address",
    "diem-types/diem_address",
    "vm/diem_address",
    "move-vm-types/diem_address",
    "move-vm-runtime/diem_address",
    "diem-vm/diem_address",
    "diem-state-view/diem_address",
    "diem-config/diem_address",
]

dfinance_address = [
    "move-core-types/dfinance_address",
    "bytecode-verifier/dfinance_address",
    "diem-types/dfinance_address",
    "vm/dfinance_address",
    "move-vm-types/dfinance_address",
    "move-vm-runtime/dfinance_address",
    "diem-vm/dfinance_address",
    "diem-state-view/dfinance_address",
    "diem-config/dfinance_address",
]

ps_address = [
    "move-core-types/ps_address",
    "bytecode-verifier/ps_address",
    "diem-types/ps_address",
    "vm/ps_address",
    "move-vm-types/ps_address",
    "move-vm-runtime/ps_address",
    "diem-vm/ps_address",
    "diem-state-view/ps_address",
    "diem-config/ps_address",
]
